terraform - provider-tiers

--- a/terraform/1-deploying-infrastructure-with-terraform/22-provider-tiers/22.md
+++ b/terraform/1-deploying-infrastructure-with-terraform/22-provider-tiers/22.md
@@ -1,3 +1,21 @@
+## Provider Maintainers
+- There are 3 primary type of provider tiers in Terraform.
+
+| Provider Tiers | Description                                                                                |
+|----------------|--------------------------------------------------------------------------------------------|
+| Official       | Owned and Maintained by HashiCorp                                                          |
+| Partner        | Owned and Maintained by Technology Company that maintains direct partnership with HashCorp |
+| Community      | Owned and Maintained by Individual Contributors                                            |
+
+## Provider Namspace
+- **Namespaces** are used to help users identify the organization or publisher responsible for the integration.
+
+| Provider Tiers | Description                                                         |
+|----------------|---------------------------------------------------------------------|
+| Official       | hashicorp                                                           |
+| Partner        | Third-party organization. e.g: mongodb/mongodbatlas                 |
+| Community      | Maintainer's individual or organization account, e.g. DeviaVir/suit |
+
 ## Important Learning
 - Terraform requires explicit source information for any providers that are not HashiCorp-maintained, using a new syntax in the required_providers nested block inside the terrafom configuration block
 
@@ -11,14 +29,14 @@ provider "aws" {
 
 ```tf
 terraform {
-    required_providers {
-        digitalocean {
+    required_provider {
+        digitalocean = {
             source = "digitalocean/digitalocean"
         }
     }
 }
 
 provider "digitalocean" {
-    token = ""
+    token = "PUT-YOUR-TOKEN-HERE"
 }
 ```
