terraform - creating aws security groups

--- a/terraform/2-read-generate-and-modify-configurations/35-creating-firewall-rules-using-terraform/35.md
+++ b/terraform/2-read-generate-and-modify-configurations/35-creating-firewall-rules-using-terraform/35.md
@@ -1,6 +1,18 @@
+## Creating Firewalls using Terraform
+- We will create a Firewall (Security Group) in AWS with following configuration 
+| Inbound                 | Outbound  |
+|-------------------------|-----------|
+| Allow 80 from 0.0.0.0/0 | Allow All |
+
+## TF code
+```
 resource "aws_security_group" "allow_tls" {
     name = "terraform-firewall"
     description = "Managed from Terraform"
+    vpc_id = aws_vpc.main.id
+    tags = {
+        Name = "allow_tls"
+    }
 }
 
 resource "aws_vpc_security_group_ingress_rule" "allow_tls_ipv4" {
@@ -16,3 +28,4 @@ resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv4" {
     cidr_ipv4 = "0.0.0.0/0"
     ip_protocol = "-1"
 }
+```
