terraform - conditional expressions

--- a/terraform/2-read-generate-and-modify-configurations/49-data-type/49.md
+++ b/terraform/2-read-generate-and-modify-configurations/49-data-type/49.md
@@ -61,3 +61,35 @@ variable "instance_tags" {
 ```
 - We can add multiple tags to AWS resources
 - These tags are key-value pairs
+
+
+## Conditional Expressions
+
+### Conditional Expressison Based on Use-case
+```
+variable "environment" {
+    default = "development"
+}
+
+resource "aws_instance" "example" {
+    instance_type = var.environment == "development" ? "t2.micro" : "m5.large"
+    ami = "ami-..."
+}
+```
+
+### Conditional Expression with Multiple Variables
+```
+variable "environment" {
+    default = "production"
+}
+
+variable "region" {
+    default = "ap-south-1"
+}
+
+resource "aws_instance" "example" {
+    instance_type = var.environment == "production" && var.region == "us-east-1" ? "m5.large" : "t2.micro"
+    ami = "ami-..."
+}
+```
+
