--- a/terraform/2-read-generate-and-modify-configurations/49-data-type/49.md
+++ b/terraform/2-read-generate-and-modify-configurations/49-data-type/49.md
@@ -93,3 +93,50 @@ resource "aws_instance" "example" {
 }
 ```
 
+## Terraform Functions
+- A function is a block of code that performs a specific task
+- Terraform has a wide variety of functions available to achieve different set of use-cases
+- Functions are grouped into categories. Some of these include:
+| Function Categories  | Available Functions                      |
+|----------------------|------------------------------------------|
+| Numberic functions   | abs, ceil, floor, max, min               |
+| String functions     | concat, replace, split, tolower, toupper |
+| Collection functions | element, keys, length, merge, sort       |
+| Filesystem functions | file, filebase64, dirname                |
+
+### Importance of File Function
+- `file()` reads the contents of a file at the given path and returns them as a string.
+- Before
+```json
+resource "aws_iam_user_policy" "lb_ro" {
+    name = "demo-user-policy"
+    user = aws_iam_user.this.name
+    policy = jsonencode({
+        "Version": "2012-10-17",
+        "Statement" : [
+            {
+                "Action": "ec2:*",
+                "Effect": "Allow",
+                "Resource": "*"
+            },
+            {
+                "Action": "elasticloadbalancing",
+                "Effect": "Allow",
+                "Resource": "*"
+            },
+        ]
+    })
+}
+```
+- After using file()
+```tf
+resource "aws_iam_user_policy" "lb_ro" {
+    name = "demo-user-policy"
+    user = aws_iam_user.this.name
+    policy = file("./ec2-policy.json")
+}
+```
+
+## Notes
+- Terraform does not support user-defined functions, and so only the functions built in to the language are available for use
+- The documentation includes a page for all of the available built-in functions.
