terraform - data source format

--- a/terraform/2-read-generate-and-modify-configurations/59-data-sources/59.md
+++ b/terraform/2-read-generate-and-modify-configurations/59-data-sources/59.md
@@ -17,3 +17,20 @@ data "local_file" "foo" {
 ```
 data "aws_instances" "example" {}
 ```
+## Format
+- A data source is accessed via a special kind of resource known as a data resource, declared uing a data block
+- Following data block requests that Terraform read from a given data source ("aws_instance") and export the result under the given local name ("foo")
+```
+data "aws_instance" "foo" {}
+```
+
+## Filter Structure
+- Within the block body (between `{` and `}`) are query constraints defined by the data source.
+```
+data "aws_instance" "foo" {
+    filter {
+        name = "tag:Team"
+        values = ["Production"]
+    }
+}
+```
