terraform - meta argument lifecycle in details

--- a/terraform/2-read-generate-and-modify-configurations/83-meta-argument-lifecycle/83.md
+++ b/terraform/2-read-generate-and-modify-configurations/83-meta-argument-lifecycle/83.md
@@ -17,3 +17,40 @@ resource "aws_appautoscaling_target" "ecs_target" {
     }
 }
 ```
+
+## create_before_destroy
+- By default, when terraform must change a resource argument that cannot be updated in-place due to remote API limitations, Terraform will instead destroy the existing object and then create a new replacement object with the new configured arguments.
+- the `create_before_destroy` meta-argument changes this behavior so that the new replacement object is created first, and the prior object is destroyed after the replacement is created.
+
+## prevent_destroy
+- This meta-argument, when set to true, will cause Terraform to reject with an error any plan that would destroy the infrastructure object associated with the resource, as long as the argument remains present in the configuration.
+```
+resource "aws_instance" "myec2" {
+    ami = "ami.1231231"
+    instance_type = "t2.micro"
+    lifecycle {
+        prevent_destroy = true
+    }
+}
+```
+
+### Notes
+- This can be used as a measure of satety against the accidental replacement of objects that may be costly to reproduce, such as database instances.
+- Since this argument must be present in configuration for the protection to apply, note that this setting does not prevent the remote object from being destroy if the resource block were removed from configuration entirely.
+
+## ignore_changes
+- In cases where settings of a remote object is modified by processes outside of terraform, the terraform would attempt to fix on the next run.
+- In order to change this behavior and ignore the manually applied change, we can make use of ignore_changes argument under lifecycle.
+```
+resource "aws_instance" "myec2" {
+    ami = "ami-adsda12d1210312"
+    instance_type = "t2.micro"
+
+    lifecycle {
+        ignore_changes = [tags]
+    }
+}
+```
+
+### notes
+- Instead of a list, the special keyword all may be used to instruct terraform to ignore all attributes, which means that terraform can create and destroy the remote object but will never propose updates to it.
