terraform - Types of Provisioners in Terraform

--- a/terraform/3-terraform-provisioners/93-overview-of-provisioners/93.md
+++ b/terraform/3-terraform-provisioners/93-overview-of-provisioners/93.md
@@ -7,3 +7,10 @@
 - Example: After VM is launched, install software package required for application.
 
 ## Types of Provisioners in Terraform
+### `local-exec` provisioner
+- The `local-exec` provisioner invokes a local executable after a resource is created.
+- Example: After EC2 is launched, fetch the IP and store it in file server_ip.txt
+
+### `remote-exec` provisioner
+- `remote-exec` provisioners allow to invoke scripts or run commands directly on the remote server.
+- Example: After EC2 is launched, install "apache" software
