terraforn - Format of Provisioner

--- a/terraform/3-terraform-provisioners/93-overview-of-provisioners/93.md
+++ b/terraform/3-terraform-provisioners/93-overview-of-provisioners/93.md
@@ -14,3 +14,62 @@
 ### `remote-exec` provisioner
 - `remote-exec` provisioners allow to invoke scripts or run commands directly on the remote server.
 - Example: After EC2 is launched, install "apache" software
+
+## Format of Provisioner
+### Defining Provisioners
+- Provisioners are defined inside a specific resource
+```
+resource "aws_instance" "myec2" {
+    ami = "ami-..."
+    instance_type = "t2.micro"
+    <provisioners-need-to-be-defined-inside-resource>
+}
+```
+- Provisioners are defined by "provisioner" followed by type of provisioner
+
+```
+resource "aws_instance" "myec2" {
+    ami = "ami-..."
+    instance_type = "t2.micro"
+
+    provisioner "local-exec" {}
+
+    provisioner "remote-exec" {}
+}
+```
+
+### Local Provisioner Approach
+- For local provisioners, we have to specify command that needs to run locally
+```
+resource "aws_instance" "example" {
+    ami = "ami-09sdad..."
+    instance_type = "t2.micro"
+
+    provisioner "local-exec" {
+        command = "echo Server has been created through Terraform"
+    }
+}
+```
+
+### Remote Exec Provisioner Approach
+- Since commands are executed on remote-server, we have to provide way for Terraform to connect to remote server.
+```
+resource "aws_instance" "myec2" {
+    ami = "ami-..."
+    instance_type = "t2.micro"
+
+    connection {
+        type = "ssh"
+        user = "ec2-user"
+        private_key = file("./terraform-key.perm")
+        host = self.public_ip
+    }
+
+    provisioner "remote-exec" {
+        inline = [
+            "sudo yum install -y nginx"
+            "sudo systemctl start nginx"
+        ]
+    }
+}
+```
