terraform - some notes on provisioner

--- a/terraform/3-terraform-provisioners/93-overview-of-provisioners/93.md
+++ b/terraform/3-terraform-provisioners/93-overview-of-provisioners/93.md
@@ -73,3 +73,30 @@ resource "aws_instance" "myec2" {
     }
 }
 ```
+
+## Notes
+### Provisioner are defined inside resource block
+- It is not necessary to define a `aws_instance` resource block for provisioner to run.
+- They can be defined inside other resource types as well
+```
+resource "aws_iam_user" "lb" {
+    name = "loadbalancer"
+    provisioner "local-exec" {
+        command = "echo local-exec provisioner is starting"
+    }
+}
+```
+### Multiple provisioner blocks for single resource
+- We can define multiple provisioners block in a single resource block.
+```
+resource "aws_iam_user" "lb" {
+    name = "loadbalancer"
+    provisioner "local-exec" {
+        command = "echo local-exec provisioner is starting"
+    }
+
+    provisioner "local-exec" {
+        command = "echo local-exec-2 provisioner is starting"
+    }
+}
+```
