terraform - creation time vs destroy time

--- a/terraform/3-terraform-provisioners/93-overview-of-provisioners/93.md
+++ b/terraform/3-terraform-provisioners/93-overview-of-provisioners/93.md
@@ -100,3 +100,28 @@ resource "aws_iam_user" "lb" {
     }
 }
 ```
+
+## Creation Time vs. Destroy Time Provisioners
+
+### Creation Time
+- By default, provisioners run when the resource they defined within is created.
+- Creatimg tiome provisioners are only run during creation, not during updating or any other lifecycle.
+
+### Destroy Time
+- Destroy provisioners are run before the resource is destroyed
+- Example:
+    - Remove and DE-link Anti-virus software before EC2 gets terminated.
+
+```
+resource "aws_instance" "web" {
+    provisioner "local-exec" {
+        when = destroy
+        command = "echo 'Destroy-time provisioner'"
+    }
+}
+```
+
+### Tainting Resource in Creation-Time Provisioners
+- If a creation-time provisioner fails, the resource is marked as tainted.
+- A tainted resource will be planned for destruction and recreation upon the next terraform apply.
+- Terraform does this because a failed provisioner can leave a resource in a semi-configured state.
