terraform - on_failure provisioner

--- a/terraform/3-terraform-provisioners/93-overview-of-provisioners/93.md
+++ b/terraform/3-terraform-provisioners/93-overview-of-provisioners/93.md
@@ -125,3 +125,26 @@ resource "aws_instance" "web" {
 - If a creation-time provisioner fails, the resource is marked as tainted.
 - A tainted resource will be planned for destruction and recreation upon the next terraform apply.
 - Terraform does this because a failed provisioner can leave a resource in a semi-configured state.
+
+## Failure Behavior in Provisioners
+- By default, provisioners that fail will also cause the terraform apply itself to fail.
+- This will lead to resource being tainted and we have to re-create the resource.
+
+### `on_failure` setting
+- The `on_failure` setting can be used to change the default behaviour.
+| Allowed Values | Description                                                                                                    |
+|----------------|----------------------------------------------------------------------------------------------------------------|
+| continue       | ignore the error and continue with creation or destruction                                                     |
+| fail           | raise an error and stop applying (the default behavior). If this is a creation provisioner, taint the resource |
+
+### Example
+```
+resource "aws_iam_user" "lb" {
+    name = "loadbalancer"
+    
+    provisioner "local-exec" {
+        command = "echo local-exec provisioner is starting"
+        on_failure = continue
+    }
+}
+```
